--- a/styles/style.css
+++ b/styles/style.css
@@ -1,2 +1,454 @@
-@import url(./normalize.css);
-@import url(../assets/fonts/fonts.css);
+@font-face {
+  font-family: "Rubik";
+  src: local("Rubik-Medium"), url("../assets/fonts/Rubik-Medium.woff") format("woff"), url("../assets/fonts/Rubik-Medium.woff2") format("woff2");
+  font-weight: 500;
+}
+@font-face {
+  font-family: "Rubik";
+  src: local("Rubik-Regular"), url("../assets/fonts/Rubik-Regular.woff") format("woff"), url("../assets/fonts/Rubik-Regular.woff2") format("woff2");
+  font-weight: 400;
+}
+@font-face {
+  font-family: "Ubuntu";
+  src: local("Ubuntu-Bold"), url("../assets/fonts/Ubuntu-Bold.woff") format("woff"), url("../assets/fonts/Ubuntu-Bold.woff2") format("woff2");
+  font-weight: 700;
+}
+@font-face {
+  font-family: "Ubuntu";
+  src: local("Ubuntu-Medium"), url("../assets/fonts/Ubuntu-Medium.woff") format("woff"), url("../assets/fonts/Ubuntu-Medium.woff2") format("woff2");
+  font-weight: 500;
+}
+@font-face {
+  font-family: "Nunito Sans";
+  src: local("Nunito Sans-Regular"), url("../assets/fonts/NunitoSans-Regular.woff") format("woff"), url("../assets/fonts/NunitoSans-Regular.woff2") format("woff2");
+  font-weight: 400;
+}
+* {
+  padding: 0px;
+  margin: 0px;
+  border: none;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+/* Links */
+a, a:link, a:visited {
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: none;
+}
+
+/* Common */
+aside, nav, footer, header, section, main {
+  display: block;
+}
+
+h1, h2, h3, h4, h5, h6, p {
+  font-size: inherit;
+  font-weight: inherit;
+}
+
+ul, ul li {
+  list-style: none;
+}
+
+img {
+  vertical-align: top;
+}
+
+img, svg {
+  max-width: 100%;
+  height: auto;
+}
+
+address {
+  font-style: normal;
+}
+
+/* Form */
+input, textarea, button, select {
+  font-family: inherit;
+  font-size: inherit;
+  color: inherit;
+  background-color: transparent;
+}
+
+input::-ms-clear {
+  display: none;
+}
+
+button, input[type=submit] {
+  display: inline-block;
+  box-shadow: none;
+  background-color: transparent;
+  background: none;
+  cursor: pointer;
+}
+
+input:focus, input:active,
+button:focus, button:active {
+  outline: none;
+}
+
+button::-moz-focus-inner {
+  padding: 0;
+  border: 0;
+}
+
+label {
+  cursor: pointer;
+}
+
+legend {
+  display: block;
+}
+
+body {
+  background-color: rgb(245, 244, 255);
+}
+
+.header {
+  max-width: 1300px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+  min-height: 85px;
+  align-items: center;
+}
+
+.header__logo {
+  font-family: "Ubuntu", sans-serif;
+  font-weight: 700;
+  font-size: 24px;
+  color: rgb(180, 56, 122);
+}
+
+.header__nav {
+  display: flex;
+  justify-content: space-between;
+  width: 437px;
+}
+
+.header__nav-link {
+  font-family: "Ubuntu", sans-serif;
+  font-weight: 700;
+  font-size: 16px;
+  color: rgb(29, 25, 41);
+  transition: 0.5s;
+}
+
+.header__nav-link:hover {
+  color: rgb(77, 64, 113);
+}
+
+.header__button {
+  width: 128px;
+  height: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 16px;
+  font-family: "Ubuntu", sans-serif;
+  font-weight: 700;
+  font-size: 16px;
+  color: white;
+  background: rgb(0, 60, 255);
+  transition: 0.5s;
+}
+
+.header__button:hover {
+  background: rgb(180, 56, 122);
+}
+
+.choose {
+  max-width: 1300px;
+  margin: 0 auto;
+  padding-top: 125px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.choose__title {
+  max-width: 630px;
+  font-family: "Ubuntu", sans-serif;
+  line-height: 48px;
+  font-weight: 700;
+  font-size: 48px;
+  margin-bottom: 40px;
+}
+
+.choose-button {
+  width: 160px;
+  height: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 16px;
+  font-family: "Ubuntu", sans-serif;
+  font-weight: 700;
+  font-size: 16px;
+  color: white;
+  background: rgb(0, 60, 255);
+  transition: 0.5s;
+}
+
+.choose-button:hover {
+  background: rgb(180, 56, 122);
+}
+
+.choose__cards {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-gap: 12px;
+}
+
+.features {
+  max-width: 1300px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+  padding-top: 114px;
+}
+
+.features__title {
+  font-family: "Rubik", sans-serif;
+  font-weight: 500;
+  font-size: 35px;
+  line-height: 50px;
+  margin-top: 73px;
+}
+
+.features__text {
+  font-family: "Rubik", sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 30px;
+  margin-top: 20px;
+}
+
+.features__list {
+  padding-top: 17px;
+}
+
+.features__list-item {
+  font-family: "Rubik", sans-serif;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 30px;
+  margin-top: 10px;
+}
+
+.features__list-item::before {
+  content: url(../assets/img/chek.png);
+  margin-right: 20px;
+}
+
+.exchange {
+  max-width: 1300px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+  padding: 30px;
+  background: linear-gradient(358.2deg, rgba(178, 178, 178, 0.8) 8.06%, rgba(178, 178, 178, 0) 67.93%), linear-gradient(0deg, rgba(244, 244, 244, 0.9), rgba(244, 244, 244, 0.9));
+  border-radius: 28px;
+  margin-top: 50px;
+}
+
+.exchange__title {
+  font-family: "Ubuntu", sans-serif;
+  font-size: 30px;
+  font-weight: 500;
+  line-height: 50px;
+}
+
+.exchange__text {
+  font-family: "Ubuntu", sans-serif;
+  font-size: 20px;
+  font-weight: 500;
+  line-height: 50px;
+  margin-top: 20px;
+}
+
+.exchange__cur {
+  padding-top: 35px;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 30px;
+}
+
+.exchange__cur-value {
+  font-family: "Ubuntu", sans-serif;
+  font-size: 20px;
+  font-weight: 700;
+  line-height: 22px;
+  color: rgb(128, 128, 128);
+}
+
+.exchange__cur-price {
+  margin-left: 17px;
+  color: black;
+}
+
+.exchange__link {
+  font-family: "Ubuntu", sans-serif;
+  font-size: 20px;
+  font-weight: 700;
+  line-height: 22px;
+  color: white;
+  display: block;
+  padding-top: 52px;
+  transition: 0.5s;
+}
+
+.exchange__link:hover {
+  color: rgb(180, 56, 122);
+}
+
+.exchange__update-text {
+  font-family: "Ubuntu", sans-serif;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 50px;
+  letter-spacing: 0em;
+  text-align: left;
+}
+
+.exchange__update-img {
+  display: block;
+  float: right;
+  margin-top: 80px;
+}
+
+.world {
+  max-width: 1300px;
+  margin: 0 auto;
+  text-align: center;
+}
+
+.world__title {
+  font-family: "Ubuntu", sans-serif;
+  font-size: 30px;
+  font-weight: 500;
+  line-height: 50px;
+  padding-top: 50px;
+}
+
+.world__text {
+  font-family: "Ubuntu", sans-serif;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 50px;
+  padding-top: 8px;
+}
+
+.world__img {
+  margin-top: 38px;
+}
+
+.support {
+  max-width: 1300px;
+  margin: 0 auto;
+  padding-top: 820px;
+  text-align: center;
+}
+
+.support__text-color {
+  font-family: "Ubuntu", sans-serif;
+  font-size: 24px;
+  font-weight: 700;
+  line-height: 35px;
+  color: rgb(235, 128, 29);
+}
+
+.support__title {
+  font-family: "Ubuntu", sans-serif;
+  font-size: 30px;
+  font-weight: 700;
+  line-height: 44px;
+  letter-spacing: 0.02em;
+  padding-top: 30px;
+}
+
+.support__text {
+  font-family: "Ubuntu", sans-serif;
+  font-size: 30px;
+  font-weight: 500;
+  line-height: 44px;
+  letter-spacing: 0.02em;
+  padding: 23px 0px 55px 0px;
+}
+
+.support__form {
+  margin: auto;
+  width: 525px;
+  height: 90px;
+  border-radius: 20px;
+  background: white;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 40px 20px 40px 40px;
+}
+
+.support__form-input {
+  width: 270px;
+  font-family: "Nunito Sans", sans-serif;
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 29px;
+  letter-spacing: 0.02em;
+}
+
+.support__form-input::-moz-placeholder {
+  font-family: "Nunito Sans", sans-serif;
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 29px;
+  letter-spacing: 0.02em;
+  text-align: center;
+  color: rgb(144, 146, 176);
+  text-align: left;
+  padding-left: 10px;
+}
+
+.support__form-input::placeholder {
+  font-family: "Nunito Sans", sans-serif;
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 29px;
+  letter-spacing: 0.02em;
+  text-align: center;
+  color: rgb(144, 146, 176);
+  text-align: left;
+  padding-left: 10px;
+}
+
+.support__form-button {
+  width: 161px;
+  height: 45px;
+  border-radius: 20px;
+  background: rgb(104, 109, 241);
+  color: white;
+  padding: 10px;
+  font-family: "Ubuntu", sans-serif;
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 20px;
+  display: flex;
+  align-items: center;
+  transition: 0.5s;
+}
+
+.support__form-button:hover {
+  background: rgb(180, 56, 122);
+}
+
+.support__form-sign {
+  padding-right: 10px;
+}/*# sourceMappingURL=style.css.map */
