--- a/styles/style.css
+++ b/styles/style.css
@@ -115,55 +115,128 @@ body {
 
 .header {
   max-width: 1300px;
-  margin: 0 auto;
+  margin: 0px auto;
   display: flex;
   justify-content: space-between;
-  min-height: 85px;
   align-items: center;
+  min-height: 85px;
+}
+@media screen and (max-width: 1350px) {
+  .header {
+    max-width: 1000px;
+  }
+}
+@media screen and (max-width: 1050px) {
+  .header {
+    max-width: 800px;
+  }
+}
+@media screen and (max-width: 850px) {
+  .header {
+    max-width: 90%;
+    display: flex;
+    justify-content: left;
+    align-items: center;
+  }
+}
+@media screen and (max-width: 650px) {
+  .header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
 }
 
 .header__logo {
   font-family: "Ubuntu", sans-serif;
   font-weight: 700;
+  line-height: 27px;
   font-size: 24px;
+  letter-spacing: 0.02em;
   color: rgb(180, 56, 122);
 }
 
 .header__nav {
   display: flex;
   justify-content: space-between;
+  align-items: stretch;
   width: 437px;
+}
+@media screen and (max-width: 850px) {
+  .header__nav {
+    width: 400px;
+  }
+}
+@media screen and (max-width: 650px) {
+  .header__nav {
+    display: none;
+  }
 }
 
 .header__nav-link {
   font-family: "Ubuntu", sans-serif;
   font-weight: 700;
+  line-height: 18px;
   font-size: 16px;
+  letter-spacing: 0.02em;
   color: rgb(29, 25, 41);
   transition: 0.5s;
 }
-
 .header__nav-link:hover {
-  color: rgb(77, 64, 113);
+  color: rgb(180, 56, 122);
+}
+@media screen and (max-width: 850px) {
+  .header__nav-link {
+    font-size: 14px;
+  }
 }
 
 .header__button {
   width: 128px;
   height: 50px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
   border-radius: 16px;
+  background: rgb(0, 60, 255);
+  color: rgb(255, 255, 255);
+  display: flex;
+  justify-content: center;
+  align-items: center;
   font-family: "Ubuntu", sans-serif;
   font-weight: 700;
+  line-height: 18px;
   font-size: 16px;
-  color: white;
-  background: rgb(0, 60, 255);
+  letter-spacing: 0.02em;
   transition: 0.5s;
 }
-
 .header__button:hover {
+  width: 128px;
+  height: 50px;
+  border-radius: 16px;
   background: rgb(180, 56, 122);
+  color: rgb(255, 255, 255);
+}
+@media screen and (max-width: 650px) {
+  .header__button {
+    display: none;
+  }
+}
+
+.header__hamb {
+  display: none;
+}
+@media screen and (max-width: 650px) {
+  .header__hamb {
+    display: block;
+    cursor: pointer;
+  }
+}
+
+.header__hamb-bar {
+  display: block;
+  width: 40px;
+  height: 2px;
+  margin: 6px auto;
+  transition: all 0.3s ease-in-out;
+  background-color: rgb(29, 25, 41);
 }
 
 .choose {
@@ -172,34 +245,75 @@ body {
   padding-top: 125px;
   display: flex;
   justify-content: space-between;
+  align-items: stretch;
+}
+@media screen and (max-width: 1350px) {
+  .choose {
+    max-width: 1000px;
+  }
+}
+@media screen and (max-width: 1050px) {
+  .choose {
+    flex-direction: column;
+  }
 }
 
 .choose__title {
   max-width: 630px;
   font-family: "Ubuntu", sans-serif;
-  line-height: 48px;
   font-weight: 700;
+  line-height: 48px;
   font-size: 48px;
+  letter-spacing: 0em;
   margin-bottom: 40px;
+}
+@media screen and (max-width: 1050px) {
+  .choose__title {
+    text-align: center;
+    margin: 0px auto 40px;
+    width: 90%;
+  }
+}
+@media screen and (max-width: 850px) {
+  .choose__title {
+    text-align: center;
+    margin: 0px auto 40px;
+    width: 90%;
+    font-family: "Ubuntu", sans-serif;
+    font-weight: 700;
+    line-height: 48px;
+    font-size: 36px;
+    letter-spacing: 0em;
+  }
 }
 
 .choose-button {
   width: 160px;
   height: 50px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
   border-radius: 16px;
+  background: rgb(0, 60, 255);
+  color: rgb(255, 255, 255);
+  display: flex;
+  justify-content: center;
+  align-items: center;
   font-family: "Ubuntu", sans-serif;
   font-weight: 700;
+  line-height: 18px;
   font-size: 16px;
-  color: white;
-  background: rgb(0, 60, 255);
+  letter-spacing: 0.02em;
   transition: 0.5s;
 }
-
 .choose-button:hover {
+  width: 128px;
+  height: 50px;
+  border-radius: 16px;
   background: rgb(180, 56, 122);
+  color: rgb(255, 255, 255);
+}
+@media screen and (max-width: 1050px) {
+  .choose-button {
+    margin: auto;
+  }
 }
 
 .choose__cards {
@@ -207,43 +321,93 @@ body {
   grid-template-columns: repeat(2, 1fr);
   grid-gap: 12px;
 }
+@media screen and (max-width: 1050px) {
+  .choose__cards {
+    align-self: center;
+    margin-top: 30px;
+    width: 70%;
+  }
+}
 
 .features {
   max-width: 1300px;
-  margin: 0 auto;
+  margin: 0px auto;
   display: flex;
   justify-content: space-between;
+  align-items: stretch;
   padding-top: 114px;
+}
+@media screen and (max-width: 1350px) {
+  .features {
+    max-width: 1000px;
+  }
+}
+@media screen and (max-width: 1050px) {
+  .features {
+    flex-direction: column;
+  }
+}
+
+@media screen and (max-width: 1050px) {
+  .features__img {
+    display: block;
+    margin: auto;
+    width: 70%;
+  }
 }
 
 .features__title {
   font-family: "Rubik", sans-serif;
   font-weight: 500;
-  font-size: 35px;
   line-height: 50px;
+  font-size: 35px;
+  letter-spacing: 0em;
   margin-top: 73px;
+}
+@media screen and (max-width: 1050px) {
+  .features__title {
+    width: 70%;
+    display: block;
+    margin: 30px auto;
+    text-align: center;
+  }
 }
 
 .features__text {
   font-family: "Rubik", sans-serif;
   font-weight: 400;
-  font-size: 16px;
   line-height: 30px;
+  font-size: 16px;
+  letter-spacing: 0em;
   margin-top: 20px;
+}
+@media screen and (max-width: 1050px) {
+  .features__text {
+    display: block;
+    margin: 30px auto;
+    width: 70%;
+    text-align: center;
+  }
 }
 
 .features__list {
   padding-top: 17px;
 }
+@media screen and (max-width: 1050px) {
+  .features__list {
+    width: 230px;
+    margin: auto;
+  }
+}
 
 .features__list-item {
   font-family: "Rubik", sans-serif;
   font-weight: 400;
-  font-size: 14px;
   line-height: 30px;
+  font-size: 14px;
+  letter-spacing: 0em;
   margin-top: 10px;
 }
-
 .features__list-item::before {
   content: url(../assets/img/chek.png);
   margin-right: 20px;
@@ -251,27 +415,41 @@ body {
 
 .exchange {
   max-width: 1300px;
-  margin: 0 auto;
+  margin: 0px auto;
   display: flex;
   justify-content: space-between;
+  align-items: stretch;
   padding: 30px;
   background: linear-gradient(358.2deg, rgba(178, 178, 178, 0.8) 8.06%, rgba(178, 178, 178, 0) 67.93%), linear-gradient(0deg, rgba(244, 244, 244, 0.9), rgba(244, 244, 244, 0.9));
   border-radius: 28px;
   margin-top: 50px;
 }
+@media screen and (max-width: 1350px) {
+  .exchange {
+    max-width: 1000px;
+  }
+}
+@media screen and (max-width: 1050px) {
+  .exchange {
+    width: 90%;
+    flex-direction: column-reverse;
+  }
+}
 
 .exchange__title {
   font-family: "Ubuntu", sans-serif;
-  font-size: 30px;
   font-weight: 500;
   line-height: 50px;
+  font-size: 30px;
+  letter-spacing: 0em;
 }
 
 .exchange__text {
   font-family: "Ubuntu", sans-serif;
-  font-size: 20px;
   font-weight: 500;
   line-height: 50px;
+  font-size: 20px;
+  letter-spacing: 0em;
   margin-top: 20px;
 }
 
@@ -284,39 +462,45 @@ body {
 
 .exchange__cur-value {
   font-family: "Ubuntu", sans-serif;
-  font-size: 20px;
   font-weight: 700;
   line-height: 22px;
+  font-size: 20px;
+  letter-spacing: 0.02em;
   color: rgb(128, 128, 128);
 }
 
 .exchange__cur-price {
   margin-left: 17px;
-  color: black;
+  color: rgb(0, 0, 0);
 }
 
 .exchange__link {
   font-family: "Ubuntu", sans-serif;
-  font-size: 20px;
   font-weight: 700;
   line-height: 22px;
-  color: white;
+  font-size: 20px;
+  letter-spacing: 0.02em;
+  color: rgb(255, 255, 255);
   display: block;
   padding-top: 52px;
   transition: 0.5s;
 }
-
 .exchange__link:hover {
   color: rgb(180, 56, 122);
 }
 
 .exchange__update-text {
   font-family: "Ubuntu", sans-serif;
-  font-size: 16px;
   font-weight: 500;
   line-height: 50px;
+  font-size: 16px;
   letter-spacing: 0em;
   text-align: left;
+}
+@media screen and (max-width: 1050px) {
+  .exchange__update-text {
+    text-align: right;
+  }
 }
 
 .exchange__update-img {
@@ -324,109 +508,166 @@ body {
   float: right;
   margin-top: 80px;
 }
+@media screen and (max-width: 1050px) {
+  .exchange__update-img {
+    display: none;
+  }
+}
 
 .world {
   max-width: 1300px;
-  margin: 0 auto;
+  margin: 0px auto;
   text-align: center;
+}
+@media screen and (max-width: 1350px) {
+  .world {
+    max-width: 1000px;
+  }
+}
+@media screen and (max-width: 850px) {
+  .world {
+    width: 90%;
+  }
 }
 
 .world__title {
   font-family: "Ubuntu", sans-serif;
-  font-size: 30px;
   font-weight: 500;
   line-height: 50px;
+  font-size: 30px;
+  letter-spacing: 0em;
   padding-top: 50px;
 }
 
 .world__text {
   font-family: "Ubuntu", sans-serif;
-  font-size: 16px;
   font-weight: 500;
   line-height: 50px;
+  font-size: 16px;
+  letter-spacing: 0em;
   padding-top: 8px;
 }
 
 .world__img {
   margin-top: 38px;
 }
+@media screen and (max-width: 1050px) {
+  .world__img {
+    width: 80%;
+  }
+}
 
 .support {
   max-width: 1300px;
-  margin: 0 auto;
+  margin: 0px auto;
   padding-top: 820px;
   text-align: center;
 }
 
 .support__text-color {
   font-family: "Ubuntu", sans-serif;
-  font-size: 24px;
   font-weight: 700;
   line-height: 35px;
+  font-size: 24px;
+  letter-spacing: 0.02em;
   color: rgb(235, 128, 29);
 }
 
 .support__title {
   font-family: "Ubuntu", sans-serif;
-  font-size: 30px;
   font-weight: 700;
   line-height: 44px;
+  font-size: 30px;
   letter-spacing: 0.02em;
   padding-top: 30px;
 }
 
 .support__text {
   font-family: "Ubuntu", sans-serif;
-  font-size: 30px;
   font-weight: 500;
   line-height: 44px;
+  font-size: 30px;
   letter-spacing: 0.02em;
   padding: 23px 0px 55px 0px;
 }
 
 .support__form {
-  margin: auto;
   width: 525px;
   height: 90px;
   border-radius: 20px;
-  background: white;
+  background: rgb(255, 255, 255);
+  color: rgb(144, 146, 176);
+  margin: auto;
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 40px 20px 40px 40px;
 }
+@media screen and (max-width: 1050px) {
+  .support__form {
+    width: 400px;
+    padding: 20px 10px;
+  }
+}
+@media screen and (max-width: 850px) {
+  .support__form {
+    width: 300px;
+  }
+}
 
 .support__form-input {
   width: 270px;
   font-family: "Nunito Sans", sans-serif;
-  font-size: 20px;
   font-weight: 400;
   line-height: 29px;
+  font-size: 20px;
   letter-spacing: 0.02em;
 }
-
 .support__form-input::-moz-placeholder {
   font-family: "Nunito Sans", sans-serif;
-  font-size: 20px;
   font-weight: 400;
   line-height: 29px;
+  font-size: 20px;
   letter-spacing: 0.02em;
-  text-align: center;
   color: rgb(144, 146, 176);
   text-align: left;
   padding-left: 10px;
 }
-
 .support__form-input::placeholder {
   font-family: "Nunito Sans", sans-serif;
-  font-size: 20px;
   font-weight: 400;
   line-height: 29px;
+  font-size: 20px;
   letter-spacing: 0.02em;
-  text-align: center;
   color: rgb(144, 146, 176);
   text-align: left;
   padding-left: 10px;
+}
+@media screen and (max-width: 850px) {
+  .support__form-input::-moz-placeholder {
+    font-family: "Nunito Sans", sans-serif;
+    font-weight: 400;
+    line-height: 29px;
+    font-size: 16px;
+    letter-spacing: 0.02em;
+  }
+  .support__form-input::placeholder {
+    font-family: "Nunito Sans", sans-serif;
+    font-weight: 400;
+    line-height: 29px;
+    font-size: 16px;
+    letter-spacing: 0.02em;
+  }
+}
+@media screen and (max-width: 1050px) {
+  .support__form-input {
+    width: 150px;
+  }
+}
+@media screen and (max-width: 850px) {
+  .support__form-input {
+    width: 100px;
+  }
 }
 
 .support__form-button {
@@ -434,21 +675,151 @@ body {
   height: 45px;
   border-radius: 20px;
   background: rgb(104, 109, 241);
-  color: white;
+  color: rgb(255, 255, 255);
   padding: 10px;
   font-family: "Ubuntu", sans-serif;
-  font-size: 16px;
   font-weight: 700;
   line-height: 20px;
+  font-size: 16px;
+  letter-spacing: 0em;
   display: flex;
+  justify-content: flex-start;
   align-items: center;
   transition: 0.5s;
 }
-
 .support__form-button:hover {
+  width: 161px;
+  height: 45px;
+  border-radius: 20px;
   background: rgb(180, 56, 122);
+  color: rgb(255, 255, 255);
+}
+@media screen and (max-width: 850px) {
+  .support__form-button {
+    width: 130px;
+  }
 }
 
 .support__form-sign {
   padding-right: 10px;
+}
+@media screen and (max-width: 850px) {
+  .support__form-sign {
+    padding-right: 5px;
+  }
+}
+
+.footer {
+  margin-top: 100px;
+  background: linear-gradient(0deg, rgba(178, 178, 178, 0.2), rgba(178, 178, 178, 0.2)), linear-gradient(0deg, #F4F4F4, #F4F4F4);
+}
+
+.footer__container {
+  max-width: 1300px;
+  margin: 0px auto;
+  padding: 95px 0px 90px 0px;
+}
+@media screen and (max-width: 1350px) {
+  .footer__container {
+    max-width: 1000px;
+  }
+}
+@media screen and (max-width: 1050px) {
+  .footer__container {
+    width: 90%;
+  }
+}
+
+.footer__contacts {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+@media screen and (max-width: 650px) {
+  .footer__logo {
+    width: 100px;
+  }
+}
+
+.footer__address-phone {
+  font-family: "Ubuntu", sans-serif;
+  font-weight: 700;
+  line-height: 44px;
+  font-size: 30px;
+  letter-spacing: 0em;
+  color: rgb(0, 0, 0);
+}
+@media screen and (max-width: 490px) {
+  .footer__address-phone {
+    font-family: "Ubuntu", sans-serif;
+    font-weight: 700;
+    line-height: 44px;
+    font-size: 24px;
+    letter-spacing: 0em;
+  }
+}
+
+.footer__address-email {
+  font-family: "Ubuntu", sans-serif;
+  font-weight: 500;
+  line-height: 24px;
+  font-size: 16px;
+  letter-spacing: 0.02em;
+  color: rgb(0, 0, 0);
+  display: inline-block;
+  margin-top: 8px;
+}
+
+.footer__list {
+  display: flex;
+  justify-content: flex-start;
+  align-items: stretch;
+  flex-wrap: wrap;
+  padding: 30px 0px 20px 0px;
+}
+@media screen and (max-width: 1050px) {
+  .footer__list {
+    display: flex;
+    justify-content: space-between;
+    align-items: stretch;
+  }
+}
+
+.footer__link {
+  font-family: "Ubuntu", sans-serif;
+  font-weight: 500;
+  line-height: 24px;
+  font-size: 16px;
+  letter-spacing: 0.02em;
+  color: rgb(0, 0, 0);
+  display: inline-block;
+  margin: 0px 38px 10px 0px;
+  transition: 0.5s;
+}
+.footer__link:hover {
+  color: rgb(180, 56, 122);
+}
+
+.footer__line {
+  width: 100%;
+  border: 2px solid rgba(255, 255, 255, 0.81);
+}
+
+.footer__text {
+  font-family: "Ubuntu", sans-serif;
+  font-weight: 500;
+  line-height: 24px;
+  font-size: 16px;
+  letter-spacing: 0.02em;
+  padding-top: 30px;
+}
+@media screen and (max-width: 1050px) {
+  .footer__text {
+    font-family: "Ubuntu", sans-serif;
+    font-weight: 500;
+    line-height: 24px;
+    font-size: 12px;
+    letter-spacing: 0.02em;
+  }
 }/*# sourceMappingURL=style.css.map */
