--- a/src/components/mainpage/choose/choose.css
+++ b/src/components/mainpage/choose/choose.css
@@ -1,86 +1,99 @@
 .choose {
-    max-width: 1300px;
-    margin: 0 auto;
-    padding-top: 125px;
-    display: flex;
-    justify-content: space-between;
-    align-items: stretch;
+  max-width: 1300px;
+  margin: 0 auto;
+  padding-top: 125px;
+  display: flex;
+  justify-content: space-between;
+  align-items: stretch;
+}
+
+@media screen and (max-width: 1350px) {
+  .choose {
+    max-width: 1000px;
   }
-  @media screen and (max-width: 1350px) {
-    .choose {
-      max-width: 1000px;
-    }
+}
+
+@media screen and (max-width: 1050px) {
+  .choose {
+    flex-direction: column;
   }
-  @media screen and (max-width: 1050px) {
-    .choose {
-      flex-direction: column;
-    }
+}
+
+.choose__title {
+  max-width: 630px;
+  font-family: "Ubuntu", sans-serif;
+  font-weight: 700;
+  line-height: 48px;
+  font-size: 48px;
+  letter-spacing: 0em;
+  margin-bottom: 40px;
+}
+
+@media screen and (max-width: 1050px) {
+  .choose__title {
+    text-align: center;
+    margin: 0px auto 40px;
+    width: 90%;
   }
-  .choose .choose__title {
-    max-width: 630px;
+}
+
+@media screen and (max-width: 850px) {
+  .choose__title {
+    text-align: center;
+    margin: 0px auto 40px;
+    width: 90%;
     font-family: "Ubuntu", sans-serif;
     font-weight: 700;
     line-height: 48px;
-    font-size: 48px;
+    font-size: 36px;
     letter-spacing: 0em;
-    margin-bottom: 40px;
   }
-  @media screen and (max-width: 1050px) {
-    .choose .choose__title {
-      text-align: center;
-      margin: 0px auto 40px;
-      width: 90%;
-    }
+}
+
+.choose-button {
+  width: 160px;
+  height: 50px;
+  border-radius: 16px;
+  background: rgb(0, 60, 255);
+  color: rgb(255, 255, 255);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: "Ubuntu", sans-serif;
+  font-weight: 700;
+  line-height: 18px;
+  font-size: 16px;
+  letter-spacing: 0.02em;
+  transition: 0.5s;
+}
+
+.choose-button:hover {
+  width: 160px;
+  height: 50px;
+  border-radius: 16px;
+  background: rgb(180, 56, 122);
+  color: rgb(255, 255, 255);
+}
+
+@media screen and (max-width: 1050px) {
+  .choose-button {
+    margin: auto;
   }
-  @media screen and (max-width: 850px) {
-    .choose .choose__title {
-      text-align: center;
-      margin: 0px auto 40px;
-      width: 90%;
-      font-family: "Ubuntu", sans-serif;
-      font-weight: 700;
-      line-height: 48px;
-      font-size: 36px;
-      letter-spacing: 0em;
-    }
+}
+
+.choose__cards {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-gap: 12px;
+}
+.choose__card{
+  border-radius: 10px;
+}
+
+@media screen and (max-width: 1050px) {
+  .choose__cards {
+    align-self: center;
+    margin-top: 30px;
+    width: 70%;
   }
-  .choose .choose-button {
-    width: 160px;
-    height: 50px;
-    border-radius: 16px;
-    background: rgb(0, 60, 255);
-    color: rgb(255, 255, 255);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-family: "Ubuntu", sans-serif;
-    font-weight: 700;
-    line-height: 18px;
-    font-size: 16px;
-    letter-spacing: 0.02em;
-    transition: 0.5s;
-  }
-  .choose .choose-button:hover {
-    width: 160px;
-    height: 50px;
-    border-radius: 16px;
-    background: rgb(180, 56, 122);
-    color: rgb(255, 255, 255);
-  }
-  @media screen and (max-width: 1050px) {
-    .choose .choose-button {
-      margin: auto;
-    }
-  }
-  .choose .choose__cards {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-gap: 12px;
-  }
-  @media screen and (max-width: 1050px) {
-    .choose .choose__cards {
-      align-self: center;
-      margin-top: 30px;
-      width: 70%;
-    }
-  }
+}
