--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -9,21 +9,6 @@
   align-items: center;
   min-height: 85px;
 }
-@media screen and (max-width: 1350px) {
-  .header {
-    max-width: 1000px;
-  }
-}
-@media screen and (max-width: 1050px) {
-  .header {
-    max-width: 800px;
-  }
-}
-@media screen and (max-width: 850px) {
-  .header {
-    max-width: 90%;
-  }
-}
 
 .header__logo {
   font-family: "Ubuntu", sans-serif;
@@ -38,20 +23,10 @@
 .header__nav {
   display: flex;
   justify-content: space-between;
-  align-items: stretch;
   width: 437px;
 }
-@media screen and (max-width: 850px) {
-  .header__nav {
-    width: 400px;
-  }
-}
-@media screen and (max-width: 650px) {
-  .header__nav {
-    display: none;
-  }
-}
- .header__nav-link {
+
+.header__nav-link {
   font-family: "Ubuntu", sans-serif;
   font-weight: 700;
   line-height: 18px;
@@ -61,13 +36,9 @@
   transition: 0.5s;
   cursor: pointer;
 }
- .header__nav_link:hover {
+
+.header__nav_link:hover {
   color: rgb(180, 56, 122);
-}
-@media screen and (max-width: 850px) {
-  .header__nav .header__nav_link {
-    font-size: 14px;
-  }
 }
 
 .header__button {
@@ -86,28 +57,15 @@
   letter-spacing: 0.02em;
   transition: 0.5s;
 }
+
 .header__button:hover {
-  width: 128px;
-  height: 50px;
-  border-radius: 16px;
   background: rgb(180, 56, 122);
-  color: rgb(255, 255, 255);
-}
-@media screen and (max-width: 650px) {
-  .header__button {
-    display: none;
-  }
 }
 
 .header__hamb {
   display: none;
 }
-@media screen and (max-width: 650px) {
-  .header__hamb {
-    display: block;
-    cursor: pointer;
-  }
-}
+
 .header__hamb-bar {
   display: block;
   width: 40px;
@@ -115,4 +73,43 @@
   margin: 6px auto;
   transition: all 0.3s ease-in-out;
   background-color: rgb(29, 25, 41);
-}/*# sourceMappingURL=header.css.map */
+}
+
+@media screen and (max-width: 1350px) {
+  .header {
+    max-width: 1000px;
+  }
+}
+
+@media screen and (max-width: 1050px) {
+  .header {
+    max-width: 800px;
+  }
+}
+
+@media screen and (max-width: 850px) {
+  .header {
+    max-width: 90%;
+  }
+
+  .header__nav {
+    width: 400px;
+  }
+
+  .header__nav_link {
+    font-size: 14px;
+  }
+}
+
+@media screen and (max-width: 650px) {
+  .header__nav {
+    display: none;
+  }
+  .header__button {
+    display: none;
+  }
+  .header__hamb {
+    display: block;
+    cursor: pointer;
+  }
+}
