--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,7 +1,7 @@
+@import'./base/mixins';
 @import '../assets/fonts/fonts';
 @import './base/vars';
-@import'./base/mixins';
-@import './blocks/normalize';
+@import './blocks/settings';
 @import './blocks/header';
 @import './blocks/choose';
 @import './blocks/features';
