--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -20,7 +20,7 @@
   cursor: pointer;
 }
 
-.header__nav {
+.header__nav_list {
   display: flex;
   justify-content: space-between;
   width: 437px;
@@ -74,6 +74,28 @@
   transition: all 0.3s ease-in-out;
   background-color: rgb(29, 25, 41);
 }
+#header__toggle{
+  display: none;
+}
+#header__toggle:checked~.header__hamb>.header__hamb-bar:nth-child(1) {
+  opacity: 0;
+}
+
+#header__toggle:checked~.header__hamb>.header__hamb-bar:nth-child(2) {
+  transform: translateY(4px) rotate(45deg);
+}
+
+#header__toggle:checked~.header__hamb>.header__hamb-bar:nth-child(3) {
+  transform: translateY(-4px) rotate(-45deg);
+}
+
+#header__toggle:checked~.header__hamb>.header__hamb-bar:nth-child(4) {
+  opacity: 0;
+}
+
+#header__toggle:checked~.header__nav>.header__nav-list {
+  right: 0%;
+}
 
 @media screen and (max-width: 1350px) {
   .header {
@@ -105,11 +127,49 @@
   .header__nav {
     display: none;
   }
+
   .header__button {
     display: none;
   }
+
   .header__hamb {
+    position: absolute;
+    top: 20px;
+    right: 20px;
     display: block;
     cursor: pointer;
+    z-index: 3;
+  }
+  .header__nav_list{
+    display: block;
+    position: fixed;
+    top: 0;
+    right: -100%;
+    width: 50vw;
+    height: 100%;
+    margin: 0;
+    text-align: center;
+    padding: 120px 0;
+    background-color: rgba(245, 244, 255, 1);
+    box-shadow: 1px 0px 6px rgba(0, 0, 0, .2);
+    transition-duration: .25s;
+    z-index: 2;
+    overflow: hidden;
+  }
+  .header__nav_link{
+    font-size: 16px;
+    width: 100vw;
+    text-align: center;
+    border-bottom: 2px solid #EDF2EC;
+    padding-top: 30px;
+  }
+
+  .header__hamb_bar {
+    display: block;
+    width: 40px;
+    height: 2px;
+    margin: 6px auto;
+    transition: all 0.3s ease-in-out;
+    background-color: rgba(29, 25, 41, 1);
   }
 }
